# gpu-rdma

./: .gitignore  CMakeLists.txt  README.md  clean.sh
Common/: type.h
src/: CMakeLists.txt
src/cuda/: Makefile  rdma_client.c
src/cuda_example/: test  test.c
src/dcu/: Makefile  rdma_client.c  rdma_common.c  rocm.c  rocm.h
src/dcu_example/: Makefile  dlop.c  test.c
src/host/: CMakeLists.txt  Makefile  rdma_server.c
src/mlu/: Makefile  cnnl.c  cnnl.h  cnnl_w.c  cnnl_w.h  cnnl_warpper.c  cnnl_warpper.h  rdma_client.c  rdma_common.c  rdma_common.h  rdma_server.c  readme.md
src/mlu_example/: Makefile  test  test.c
src/nvgpu/: Makefile  cuda_w.c  cuda_w.h  rdma_client.c  rdma_common.c  rdma_common.h  rdma_server.c
src/nvgpu_example/: Makefile
src/rocm/: CMakeLists.txt  Makefile  rdma_client.c  rdma_common.c  rdma_common.h  rocm_mem.c  rocm_mem.h
src/rocm_example/: Makefile  test.c
